fix: Remove scrollbar from homepage

--- a/src/components/pages/HomePage/HomeIndex.module.scss
+++ b/src/components/pages/HomePage/HomeIndex.module.scss
@@ -13,6 +13,7 @@
   width: 100%;
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 /* Base Dark Layer (z-index: -4) */
